# Datalog-Interpreter

./: CMakeLists.txt  hello  main
DatalogInterpreter/: Database.h  Graph.h  Interpreter.h  Node.h  Parameter.h  Scanner.h  Tuple.h  main.cpp
DatalogInterpreter/project5.dSYM/Contents/Resources/DWARF/: project5
DatalogInterpreter/project5.dSYM/Contents/Resources/Relocations/aarch64/: project5.yml
lab0/: hello.cpp  lab0
lab0/lab0.dSYM/Contents/Resources/DWARF/: lab0
lab0/output/: hello
lab0/output/hello.dSYM/Contents/Resources/DWARF/: hello
lab1/: Scanner.h  Token.h  main.cpp
lab1/output/: main
lab2/: Parser.h  Token.h  a.out  main.cpp
lab3/: Relation.h  Scheme.h  Tuple.h  main.cpp
project1/: Scanner.h  Token.h  main.cpp
project1/project1.dSYM/Contents/Resources/DWARF/: project1
project2/: DatalogProgram.h  Parser.h  Predicate.h  Token.h  main.cpp
project2-practice/: DatalogProgram.h  Parameter.h  Parser.h  Predicate.h  Rule.h  Scanner.h  Token.h  a.out  main.cpp
project2-practice/project2.dSYM/Contents/Resources/DWARF/: project2
project2/project2.dSYM/Contents/Resources/DWARF/: project2
project3/: Database.h  DatalogProgram.h  Interpreter.h  Parameter.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scanner.h  Scheme.h  Tuple.h  a.out  main.cpp
project3/project3.dSYM/Contents/Resources/DWARF/: project3
project4/: Interpreter.h  Parser.h  Rule.h  Token.h  a.out  main.cpp
project4/project4.dSYM/Contents/Resources/DWARF/: project4
project5/: Graph.h  Interpreter.h  Node.h  Relation.h  Rule.h  Scheme.h  a.out  main.cpp
(+2 files in other folders)
